@@ -3,6 +3,7 @@
     * Update .gitignore and MANIFEST.SKIP.
   [Exception Changes]
     * SSLeay#select_next_proto method throws an exception if $outlen_ref is not defined.
+    * SSLeay#get0_alpn_selected method throws an exception if $len_ref is not defined.
     
 0.034001 2025-01-02
   [Bug Fix]
